# Hackathon-Starter-Kit-Back

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  pyproject.toml  supervisord.conf
.github/workflow/: pytest.yml
.github/workflows/: pytest.yml
app/: config.py  environment.py  main.py  requirements-dev.txt  requirements.txt  schema.py  uwsgi.ini
app/data/: utils.py
app/data/authentification/: __init__.py
app/data/common/: __init__.py  crud_helper.py  schema.py
app/data/hello_world/: __init__.py  controller.py  hello_world_model.py  hello_world_mutation.py  hello_world_object.py  hello_world_resolver.py  model.py  schema.py
app/data/mutation_utils/: __init__.py  create_mutation_utils.py  remove_mutation_utils.py
app/errors/: __init__.py  custom_error.py  database_errors.py  request_error.py
app/shared/: __init__.py  asset_image_manager.py  jwt_manager.py
app/shared/authentification/: __init__.py  default_jwt_manager.py  password_jwt_manager.py  phone_jwt_manager.py  utils.py
app/shared/cloudinary/: asset_image_manager.py
app/shared/twilio/: twilio_manager.py
app/shared/utils/: __init__.py  crud_helper.py  registry.py  schema.py
doc/guides/: debug.md
envs/dev/: .env.exemple  docker-compose.yml  qodana.yaml
envs/prod/: docker-compose.yml
scripts/: application_restart.sh  authentification.http  create_schema.py  graphql.config.yml  helloWorld.http  hello_world.http  password_authentification.http  phone_authentification.http  tester.sh
scripts/graphql_scripts/: tests_create.py  tests_get.py  tests_remove.py
(+83 files in other folders)
